= reposurgeon project news =

Repository Head::
     "lint" command no longer accidentally clears most Q bits.
     repocutter renumberno longer mangles mergeinfo properties.

4.31: 2022-01-08::
     Minor improvements in baton handling.
     repocutter pathrename/sift/expunge REs now match only full path segments.
     --nobranch/--branchify are gone; use repocutter to prep nonstandard repos.
     repocutter reduce now has simpler behavior and can take input from stdin.
     reposurgeon incorporarte can handle symlinks
     repocutter can now select and deselect node spans within revisions.
     In repocutter sift/expunge, new -f option disables regexp interpretation.
     In repocutter, new skipcopy and filecopy commands.
     In Subversion IDs, uniform use of .-notation for node indices.

4.30: 2021-10-13::
     Speed up DoTagify by parallelizing it.
     =J selection gets all commits and tags with non-ASCII metadata
     Added msgin --relax option.
     On most subcommands repocutter -r restricts which commits are transformed.
     Added pathlist command to repocutter.

4.29: 2021-09-08::
     Added swapsvn subcommand to repocutter.
     Don't screw up non-ASCII UTF-8 characters in pathnames.
     Node-parsing phase patches up missing copy sources.
     lint/setperm/prepend/squash/coalesce/add/remove now set Q bits.
     Several changes to reduce rge working--set cost of large selections.

4.28: 2021-08-07::
     Bug fixes for incremental mirroring, text search by tag name.
     Avoid creating duplicate tag names when a tag turns into a branch
     Enforce stable order of subnode traversals when doing node expansion.
     Added repocutter -t option to tag error messages from pipelines.

4.27: 2021-05-27::
     repocutter pathrename can do multiple path transforms in one command.
     repocutter closure finds transitive closures of path sets under copyfrom.
     IRC channel migration to OFTC.

4.26: 2021-04-03::